--- a/SumeraTravelCorporation/appsettings.json
+++ b/SumeraTravelCorporation/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-L2HUVOJB;Initial Catalog=SumeraTravelCorporation;Integrated Security=True"
+    "DefaultConnection": "Data Source=WAIANGDESK12;Initial Catalog=SumeraTravelCorporation;Integrated Security=True"
 
   }
 }
